# tensorrt_inference

./: .clang-format  .gitignore  .run-clang-format  CMakeLists.txt  LICENSE  README.md  clang-format.yaml
cmake/: Config.cmake.in  FindTensorRT.cmake  add_uninstall_target.cmake  cmake_uninstall.cmake.in  config_path.h.in  setup_compilers.cmake
config/FaceNet_vggface2_optmized/: config.yaml
config/detectron2/: config.yaml
config/facedetector/: config.yaml  facedetector.yaml
config/paddleocr/: text_detection.yaml  text_detection_config.yaml  text_recognition_config.yaml
config/plate_detection/: config.yaml  plate_detection.yaml
config/plate_yolov8n_320_2024/: config.yaml  plate_yolov8n_320_2024_label.yaml
config/retinaface/: config.yaml
config/retinaface2/: config.yaml
config/yolov8l/: config.yaml
config/yolov8x-pose/: config.yaml
config/yolov8x-seg/: config.yaml
config/yolov9e/: config.yaml
config/yolov9e-seg/: config.yaml
include/tensorrt_inference/: arcface.h  detection.h  face.h  face_recognition.h  label_const.h  model.h  paddleocr.h  retinaface.h  tensorrt_inference.h  types.h  utils.h  yolo11.h  yolo9_refactor.h  yolov8.h  yolov9.h
include/tensorrt_inference/paddle_ocr/: clipper.h  paddleocr.h  paddleocr_utils.h
include/tensorrt_inference/tensorrt_api/: Int8Calibrator.h  engine.h  logger.h  macros.h
include/tensorrt_inference/tensorrt_api/engine/: EngineBuildLoadNetwork.inl  EngineRunInference.inl  EngineUtilities.inl
include/tensorrt_inference/tensorrt_api/interfaces/: IEngine.h
include/tensorrt_inference/tensorrt_api/util/: Stopwatch.h  Util.h  Util.inl
nodes/: arcface_test.cpp  cmd_line_util.h  detection_test.cpp  detectron2_test.cpp  face_rec_test.cpp  object_detection_image.cpp  object_detection_image_yolo8.cpp  object_detection_video_stream.cpp  object_detection_video_stream_yolov8.cpp  paddleocr_test.cpp  retina_test.cpp  yolo9_refactor_test.cpp  yolov8_test.cpp  yolov9_test.cpp
pybind/: CMakeLists.txt  ndarray_converter.cpp  ndarray_converter.h  py_detection.cpp  py_model.cpp  py_tensorrt_inference.cpp  py_tensorrt_inference.h  setup.py
scripts/: example.py  pt2onnx.py  pth2onnx.py  train.py
scripts/runs/detect/train/: args.yaml  events.out.tfevents.1720597261.NEURA-444.14092.0  results.csv
scripts/runs/detect/train2/: args.yaml  events.out.tfevents.1720597383.NEURA-444.15433.0  results.csv
src/: arcface.cpp  detection.cpp  face.cpp  face_recognition.cpp  model.cpp  paddleocr.cpp  retinaface.cpp  utils.cpp  yolo11.cpp  yolo9_refactor.cpp  yolov8.cpp  yolov9.cpp
src/paddle_ocr/: clipper.cpp  paddleocr.cpp  paddleocr_utils.cpp
src/tensorrt_api/: engine.cpp
tensorrt_inference/: config_path.h
